--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.aidanas.torch"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 6
-        versionName "2.1"
+        versionCode 7
+        versionName "2.2"
     }
     buildTypes {
         release {
@@ -26,5 +26,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
